--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -33,7 +33,7 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="orders">
         <div class="row">
-       <table id="tasksTable" class="display" cellspacing="0" width="100%">
+       <table id="tasksTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Название</th>
