--- a/application/modules/admin/views/scripts/layout.phtml
+++ b/application/modules/admin/views/scripts/layout.phtml
@@ -34,7 +34,7 @@
       <div class="container">
         <nav class="blog-nav">
             
-          <a class="blog-nav-item active" href="#">Задачи</a>
+            <a class="blog-nav-item active" href="<?= $this->baseUrl().'/admin/tasks/' ?>">Задачи</a>
           <div class="btn-group">
                  <a class="btn dropdown-toggle blog-nav-item" data-toggle="dropdown" href="#">
                      Категории
@@ -85,15 +85,12 @@
 
       <div class="row">
 
-        <div class="col-sm-8 blog-main">
+
 
          <?php echo $this->layout()->content; ?>
 
-        </div><!-- /.blog-main -->
 
-        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-             Правое меню
-        </div><!-- /.blog-sidebar -->
+
 
       </div><!-- /.row -->
 
