performer can create tasks so on

--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -315,7 +315,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <ul class="userMenu">
               <?php if(Zend_Auth::getInstance()->hasIdentity()){?>
                 <li> <a href="account-1.html"><span class="hidden-xs">Личный кабинет</span> <i class="glyphicon glyphicon-user hide visible-xs "></i></a> </li>
-                <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> <span class="hidden-xs">Выйти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
+                <li> <a href="<?= $this->baseUrl().'/authentication/log-out/' ?>"  > <span class="hidden-xs">Выйти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
               <?php }else{ ?>
                 <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> <span class="hidden-xs">Войти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
                 <li class="hidden-xs"> <a href="#"  data-toggle="modal" data-target="#ModalSignup"> Регистрация </a> </li>
