--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -132,17 +132,17 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
 <body >
     <div class="themeControll">
 <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center"> Choose your colour </h3>
-<a onclick="swapStyleSheet('assets/css/skin-1.css')" style="background:#4ec67f;border-top: 12px solid #27AE60;"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-8.css')" style="background:#3BCA95;border-top: 12px solid #34BC8A"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-2.css')" style="background:#1ABC9C;border-top: 12px solid #16A085"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-3.css')" style="background:#3498DB;border-top: 12px solid #2980B9"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-4.css')" style="background:#9B59B6;border-top: 12px solid #9149AF"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-5.css')" style="background:#E74C3C;border-top: 12px solid #C0392B"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-7.css')" style="background:#95A5A6;border-top: 12px solid #7F8C8D"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-9.css')" style="background:#F7B529;border-top: 12px solid #E78E00"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-10.css')" style="background:#F17370;border-top: 12px solid #F26663"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-11.css')" style="background:#273646;border-top: 12px solid #2ECC71"> </a>
-<a onclick="swapStyleSheet('assets/css/skin-6.css')" style="background:#34495E;border-top: 12px solid #283949"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-1.css')" style="background:#4ec67f;border-top: 12px solid #27AE60;"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-8.css')" style="background:#3BCA95;border-top: 12px solid #34BC8A"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-2.css')" style="background:#1ABC9C;border-top: 12px solid #16A085"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-3.css')" style="background:#3498DB;border-top: 12px solid #2980B9"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-4.css')" style="background:#9B59B6;border-top: 12px solid #9149AF"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-5.css')" style="background:#E74C3C;border-top: 12px solid #C0392B"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-7.css')" style="background:#95A5A6;border-top: 12px solid #7F8C8D"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-9.css')" style="background:#F7B529;border-top: 12px solid #E78E00"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-10.css')" style="background:#F17370;border-top: 12px solid #F26663"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-11.css')" style="background:#273646;border-top: 12px solid #2ECC71"> </a>
+<a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-6.css')" style="background:#34495E;border-top: 12px solid #283949"> </a>
 <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center">
 <br>
  <a style="color:#fff" href="http://codepeoples.com/tanimdesign.net/thsop-v-1.3/index.html"><i class="fa fa-angle-double-left"></i> Theme Chooser </a> </h3>
@@ -318,7 +318,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           <div class="pull-right">
             <ul class="userMenu">
               <?php if(Zend_Auth::getInstance()->hasIdentity()){?>
-                <li> <a href="<?= $this->baseUrl().'/performer/user/'.$this->userId ?>"><span class="hidden-xs">Личный кабинет</span> <i class="glyphicon glyphicon-user hide visible-xs "></i></a> </li>
+                <li> <a href="<?= $this->baseUrl().'/performer/user/' ?>"><span class="hidden-xs">Личный кабинет</span> <i class="glyphicon glyphicon-user hide visible-xs "></i></a> </li>
                 <li> <a href="<?= $this->baseUrl().'/authentication/log-out/'.$this->userId ?>"  > <span class="hidden-xs">Выйти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
               <?php }else{ ?>
                 <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> <span class="hidden-xs">Войти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
@@ -437,6 +437,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+          <li > <a href="<?= $this->baseUrl()?>/performer/task/add">Создать задачу</a> </li>
           <li class="active"> <a href="<?= $this->baseUrl()?>/performer/index/tasks">Задачи </a> </li>
 
         <!-- change width of megamenu = use class > megamenu-fullwidth, megamenu-60width, megamenu-40width -->
