--- a/application/modules/performer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/performer/views/scripts/performers/performer-view.phtml
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="breadcrumbDiv col-lg-12">
       <ul class="breadcrumb">
-          <li> <a href="<?= $this->baseUrl().'/customer/' ?>">Главная</a> </li>
-          <li> <a href="<?= $this->baseUrl().'/customer/office/' ?>">Личный кабинет</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/performer/' ?>">Главная</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/performer/user/' ?>">Личный кабинет</a> </li>
         <li class="active"><?= $this->performer['username'].' '.$this->performer['surname'] ?> </li>
       </ul>
     </div>
