--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -3,7 +3,7 @@
             <h3><?= $this->user['username'].' '.$this->user['surname'] ?></h3>
         </div>
         <div class="col-lg-3">
-            <img src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" width="150px" >
+            <img class="img-thumbnail" src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" width="150px" >
         </div>
         <div class="col-lg-9">
             <div class="col-lg-12">
@@ -23,8 +23,11 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Заказы</a></li>
+    <li role="presentation"><a href="#tasks" aria-controls="tasks" role="tab" data-toggle="tab">Мои задачи</a></li>
+    <li role="presentation"><a href="#app" aria-controls="app" role="tab" data-toggle="tab">Мои заявки</a></li>
     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Сообщения</a></li>
     <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Настройки</a></li>
+    
    
   </ul>
 
@@ -32,38 +35,89 @@
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="orders">
        <!--datatable-->
+
+        <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Задача</th>
+                        <th>Заказчик</th>
+                        <th>Стоимость заказчика</th>
+                        <th>Дата окончания</th>
+                        <th>Статус</th>
+                    </tr>
+                </thead>    
+                <tbody>
+            <?php foreach($this->acceptedTasks as $task){?>
+                    <tr>
+                        <td><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"><?= $task['title'] ?></a></td>
+                        <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$task['customer_id'] ?>"><?= $task['u_username'].' '.$task['u_surname'] ?></a></td>
+                        <td><?= $task['customers_price'] ?></td>
+                        <td><?= date('d.m.Y', $task['final_date']) ?></td>
+                        <td>
+                            <?php switch ($task['status']){ 
+                                 case 'taken': 
+                                echo 'В работе';
+                                break;
+                                ?>
+                            <?php } ?>
+                        </td>
+                    </tr>
+
+            <?php } ?>
+         </tbody>
+        </table>       
        
-<table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    </div>
+    <div role="tabpanel" class="tab-pane" id="tasks">
+        <div class="row">
+       <?php if($this->orders){?>     
+       <table id="tasksTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>Задача</th>
-                <th>Заказчик</th>
-                <th>Стоимость заказчика</th>
-                <th>Дата окончания</th>
+                <th>Название</th>
+                <th>Дата создания</th>
+                <th>Дата выполнения</th>
                 <th>Статус</th>
+                <th>Удалить</th>
             </tr>
         </thead>    
+
         <tbody>
-    <?php foreach($this->acceptedTasks as $task){?>
-            <tr>
-                <td><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"><?= $task['title'] ?></a></td>
-                <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$task['customer_id'] ?>"><?= $task['u_username'].' '.$task['u_surname'] ?></a></td>
-                <td><?= $task['customers_price'] ?></td>
-                <td><?= date('d.m.Y', $task['final_date']) ?></td>
+            <?php foreach($this->orders as $task){?>
+            <tr id="tr<?= $task['id'] ?>">
+                <td><a href="<?= $this->baseUrl().'/performer/task/performers-view/id/'.$task['id']?>"><?= $task['title'] ?></a></td>
+                <td><?=  date('H:i d-m-Y', $task['created_at'])?></td>
+                <td><?= date('H:i d-m-Y', $task['final_date']) ?></td>
                 <td>
-                    <?php switch ($task['status']){ 
-                         case 'taken': 
-                        echo 'В работе';
-                        break;
-                        ?>
-                    <?php } ?>
+                  <?php switch($task['status']){
+                         case "non_taken":
+                             echo 'ожидание';
+                             break;
+                         case "closed":
+                             echo "закрыта";
+                             break;
+                  }
+                  ?>
+                </td>
+                <td>
+                    <?php if($task['status'] == 'non_taken' || $task['status'] == 'closed'){?>
+                    <button onclick="removeTask(<?= $task['id'] ?>)">Удалить</button>
+                    <img style="display: none" id="remPrel<?= $task['id'] ?>" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="50">
+                     <?php } ?>
                 </td>
             </tr>
-
-    <?php } ?>
- </tbody>
-</table>       
-       
+            <?php } ?>
+         </tbody>
+        </table>
+       <?php }else{?> 
+            <div class="col-sm-12">
+            Вы пока не создали ни одной задачи
+            </div>
+       <?php }?>    
+        </div>
+    </div>
+    <div role="tabpanel" class="tab-pane" id="app">
+      Заявки на выполнение
     </div>
     <div role="tabpanel" class="tab-pane" id="messages">
       Сообщения
@@ -73,21 +127,16 @@
               
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-                  
-                  
-                  <li role="presentation" class="active" ><a href="#info" aria-controls="info" role="tab" data-toggle="tab">Инфо</a></li>
-                  <li role="presentation"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Данные</a></li>
+
+                  <li role="presentation" class="active" ><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Данные</a></li>
                   <li role="presentation"><a href="#category" aria-controls="category" role="tab" data-toggle="tab">Категории</a></li>
    
                 </ul>
 
                 <!-- Tab panes -->
                 <div class="tab-content">
-                  <div role="tabpanel2" class="tab-pane active" id="info">
-                      Заказы
-                  </div>
                   
-                  <div role="tabpanel2" class="tab-pane" id="data">
+                  <div role="tabpanel2" class="tab-pane active" id="data">
                    
                     <?= $this->form ?>
                   </div>
@@ -155,5 +204,18 @@ function changeCategory(catId){
         });
     }
 
+}
+
+function removeTask(id){
+$('#remPrel'+id).show();
+$.ajax({
+  type: 'POST',
+  url: '<?= $this->baseUrl.'/performer/task/remove-task/'; ?>',
+  data: {id: id},
+  success: function(response){
+      $('#remPrel'+id).hide();
+      $('#tr'+id).remove();
+  }
+});   
 }
 </script>    
