attach SN accounts for customer

--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -14,7 +14,10 @@
             <div class="image">  
              <div class="quickview">
               
-             </div><a href="#" data-toggle="modal" data-target="#ModalLogin" ><img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive"></a>
+             </div>
+                <a href="#" data-toggle="modal" data-target="#ModalLogin" >
+                 <img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive">
+                </a>
 <!--              <div class="promotion"> <span class="new-product"> NEW</span> </div>-->
             </div>
             <div class="description">
