--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -1,24 +1,137 @@
-<div class="container">
+                    
     <div class="row">
-        <div class="col-lg-12">
-            <h3><?= $this->user['username'].' '.$this->user['surname'] ?></h3>
+        <div class="breadcrumbDiv col-lg-12">
+              <ul class="breadcrumb">
+                  <li> <a href="<?= $this->baseUrl() ?>">Главная</a> </li>
+                 <li class="active" >Личный кабинет</li>
+              </ul>
         </div>
-        <div class="col-lg-3">
-            <img src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" width="150px" >
+    </div>
+    <div class="row transitionfx">
+  
+   <!-- left column -->
+    <div class="col-lg-6 col-md-6 col-sm-6">
+    	<!-- product Image and Zoom -->
+
+    <div class="main-image sp-wrap col-lg-12 no-padding style2 style2look2" style="display: inline-block;"> 
+         
+        
+         
+    <div class="sp-large" style="left: 0px; top: 0px;">
+            <img width="100%" src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" class="img-responsive" alt="img" />
+
+    </div>
+    </div>
+    </div><!--/ left column end -->
+    
+    
+    <!-- right column -->
+    <div class="col-lg-6 col-md-6 col-sm-5">
+    
+      <h1 class="product-title"><?= $this->user['username']." ".$this->user['surname']?></h1>
+      <h3 class="product-code">Возраст : <?php $unixAge = time() - $this->user['birth_date'];
+                $unixYears = $unixAge/31536000;
+                $age = floor($unixYears);
+                ?>
+                <?= $age;  ?> лет
+      </h3>
+      <div class="product-price"> 
+          <span class="price-sales">
+              Создано задач:  <?php $tasksAmount = count($this->customersTasks); ?>
+              <?= $tasksAmount; ?>
+          </span>  
+      </div>
+<!--      <div class="color-details"> -->
+
+      <?php if($this->closedTasks){ ?>
+      <div class="color-details"> <span class="selected-color"><strong>Рейтинг</strong></span>
+        <ul class="swatches Color">
+          <?php switch ($this->rating){
+              case 1:?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 2:
+      ?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php
+        break;
+        case 3: ?>  
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php break;
+              case 4:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 5:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+          <?php 
+          break;
+          default: ?>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <?php }?>
+        </ul>
+      </div>
+      <?php } ?>
+      
+      <div class="clear"></div>
+
+      
+      <div style="clear:both"></div>
+      <div class="product-share clearfix">
+        <p> Привязка к соцсетям </p>
+        <div class=""> 
+            <?php if(!$this->user['fb']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/fb-link/' ?>" data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта" >
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/fb_wb.png' ?>" >
+                </a> 
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан" width="40px" src="<?= $this->baseUrl().'/ico/fb.png' ?>" >
+            <?php } ?>
+            <?php if(!$this->user['ok']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/ok-link/' ?>" data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта">
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/ok_wb.png' ?>">
+                </a> 
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан" width="40px" src="<?= $this->baseUrl().'/ico/ok.png' ?>" >
+            <?php } ?>
+            <?php if(!$this->user['vk']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/vk-link/' ?>"  data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта">
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/vk_wb.png' ?>">
+                </a>
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан"  width="40px" src="<?= $this->baseUrl().'/ico/vk.png' ?>" >
+            <?php } ?>
         </div>
-        <div class="col-lg-9">
-            <div class="col-lg-12">
-                wozrast
-            </div>
-            <div class="col-lg-12">
-                выпоолнил / создал
-            </div>
-            <div class="col-lg-12">
-                рейтинг
-            </div>
-        </div>
-        <div class="col-lg-12"></div>
-        <div class="col-lg-12">
+      </div>
+      
+    </div><!--/ right column end -->
+
+  </div>
+    <div class="row">
+        <div calss="col-lg-12" style="padding-bottom: 5px">
 <div role="tabpanel">
 
   <!-- Nav tabs -->
@@ -78,35 +191,18 @@
     </div>
     <div role="tabpanel" class="tab-pane" id="settings">
       <div role="tabpanel2">
-              
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                  
-                  
-                  <li role="presentation" class="active" ><a href="#info" aria-controls="info" role="tab" data-toggle="tab">Инфо</a></li>
-                  <li role="presentation"><a href="#data" aria-controls="data" role="tab" data-toggle="tab">Настройки</a></li>
-   
-                </ul>
-
-                <!-- Tab panes -->
-                <div class="tab-content">
-                  <div role="tabpanel2" class="tab-pane active" id="info">
-                      Заказы
-                  </div>
-                  
-                  <div role="tabpanel2" class="tab-pane" id="data">
-                    <?= $this->form ?>
-                  </div>
-                </div>
+         <?= $this->form ?>
 
        </div>
     </div>
   </div>
 
-</div>
-        </div>    
+</div> 
+        </div>
     </div>
-</div>
+
+<!--------------------------->
+
 <script>
 $(document).ready(function(){
     $('#tasksTable').DataTable({
@@ -114,7 +210,9 @@ $(document).ready(function(){
 
 
 });
-    
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+})    
 function removeTask(id){
 $('#remPrel'+id).show();
 $.ajax({
