--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -1,23 +1,200 @@
+                    
+    <div class="row">
+        <div class="breadcrumbDiv col-lg-12">
+              <ul class="breadcrumb">
+                  <li> <a href="<?= $this->baseUrl() ?>">Главная</a> </li>
+                 <li class="active" >Личный кабинет</li>
+              </ul>
+        </div>
+    </div>
+    <div class="row transitionfx">
+  
+   <!-- left column -->
+    <div class="col-lg-6 col-md-6 col-sm-6">
+    	<!-- product Image and Zoom -->
 
-        <div class="col-lg-12">
-            <h3><?= $this->user['username'].' '.$this->user['surname'] ?></h3>
+    <div class="main-image sp-wrap col-lg-12 no-padding style2 style2look2" style="display: inline-block;"> 
+         
+        
+         
+    <div class="sp-large" style="left: 0px; top: 0px;">
+            <img width="100%" src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" class="img-responsive" alt="img" />
+
+    </div>
+    </div>
+    </div><!--/ left column end -->
+    
+    
+    <!-- right column -->
+    <div class="col-lg-6 col-md-6 col-sm-5">
+    
+      <h1 class="product-title"><?= $this->user['username']." ".$this->user['surname']?></h1>
+      <h3 class="product-code">Возраст : <?php $unixAge = time() - $this->user['birth_date'];
+                $unixYears = $unixAge/31536000;
+                $age = floor($unixYears);
+                ?>
+                <?= $age;  ?> лет
+      </h3>
+      <div class="product-price"> 
+          <span class="price-sales">
+              Создано задач:  <?php $customersTasksAmount = count($this->customersTasks); ?>
+              <?= $customersTasksAmount; ?>
+          </span>  
+      </div>
+      <div class="product-price"> 
+          <span class="price-sales">
+              Выполнено задач:  <?php $performersTasksAmount = count($this->performersTasks); ?>
+              <?= $performersTasksAmount; ?>
+          </span>  
+      </div>
+<!--      <div class="color-details"> -->
+
+      <?php if($this->customersRating){ ?>
+      <div class="color-details"> <span class="selected-color"><strong>Рейтинг заказчика</strong></span>
+        <ul class="swatches Color">
+          <?php switch ($this->customersRating){
+              case 1:?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 2:
+      ?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php
+        break;
+        case 3: ?>  
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php break;
+              case 4:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 5:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+          <?php 
+          break;
+          default: ?>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <?php }?>
+        </ul>
+      </div>
+      <?php } ?>
+      
+      <div class="clear"></div>
+
+      
+      <div style="clear:both"></div>
+      <?php if($this->performersRating){ ?>
+      <div class="color-details"> <span class="selected-color"><strong>Рейтинг исполнителя</strong></span>
+        <ul class="swatches Color">
+          <?php switch ($this->performersRating){
+              case 1:?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 2:
+      ?>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php
+        break;
+        case 3: ?>  
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+        <?php break;
+              case 4:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li > <a style="background-color:#adadad"> </a> </li>
+          <?php break;
+              case 5:
+    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+            <li> <a style="background-color:#f1f40e"> </a> </li>
+          <?php 
+          break;
+          default: ?>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <li > <a style="background-color:#adadad"> </a> </li>
+          <?php }?>
+        </ul>
+      </div>
+      <?php } ?>
+      
+      <div class="clear"></div>
+
+      
+      <div style="clear:both"></div>
+      <div class="product-share clearfix">
+        <p> Привязка к соцсетям </p>
+        <div class=""> 
+            <?php if(!$this->user['fb']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/fb-link/' ?>" data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта" >
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/fb_wb.png' ?>" >
+                </a> 
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан" width="40px" src="<?= $this->baseUrl().'/ico/fb.png' ?>" >
+            <?php } ?>
+            <?php if(!$this->user['ok']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/ok-link/' ?>" data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта">
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/ok_wb.png' ?>">
+                </a> 
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан" width="40px" src="<?= $this->baseUrl().'/ico/ok.png' ?>" >
+            <?php } ?>
+            <?php if(!$this->user['vk']){?>
+                <a href="<?= $this->baseUrl().'/social-attach/vk-link/' ?>"  data-toggle="tooltip" data-placement="left" title="Нажмите для привязки своего аккаунта">
+                    <img width="30px" src="<?= $this->baseUrl().'/ico/vk_wb.png' ?>">
+                </a>
+            <?php }else{ ?>
+                <img data-toggle="tooltip" data-placement="left" title="Аккаунт привязан"  width="40px" src="<?= $this->baseUrl().'/ico/vk.png' ?>" >
+            <?php } ?>
         </div>
-        <div class="col-lg-3">
-            <img class="img-thumbnail" src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" width="150px" >
-        </div>
-        <div class="col-lg-9">
-            <div class="col-lg-12">
-                wozrast
-            </div>
-            <div class="col-lg-12">
-                выпоолнил / создал
-            </div>
-            <div class="col-lg-12">
-                рейтинг
-            </div>
-        </div>
-        <div class="col-lg-12"></div>
-        <div class="col-lg-12">
+      </div>
+      
+    </div><!--/ right column end -->
+
+  </div>
+    <div class="row">
+        <div calss="col-lg-12" style="padding-bottom: 5px; padding-top:5px">
 <div role="tabpanel">
 
   <!-- Nav tabs -->
@@ -167,20 +344,25 @@
   </div>
 
 </div>
-        </div>    
+        </div>
+    </div>
+
+
 
 <script>
 $(document).ready(function(){
 
     $('#table').DataTable();
-    
-
-    
 
     $( "#bi" ).datepicker();
  
 
-});    
+}); 
+
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+}) 
+
 function changeCategory(catId){ 
     if($('#check'+catId).is(':checked')){
         $('#prel'+catId).show();
